tests/pos/typealias/talias-05.ts
/*@ type Pos = {number | 0 < v } */

/*@ bob :: Pos */
let bob = 10;
