tests/neg/typealias/talias-00.ts
/*@ type Nat = {v: number | 1000 <= v } */

/*@ z :: Nat */
let z = 12;
